search bar layout

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,12 @@
     <h1>Burgers</h1>
     <button onclick="fetchAPI()">Press Me</button>
 
-    <div id="id">
-
+    <div class="container">
+        <div class="inner-container">
+            <div class="search-bar">
+                
+            </div>
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
