add burger image to items, update README

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                                 <button onclick="filterList()" id="search-button" title="Filter list">
                                     <i class="fa-solid fa-magnifying-glass"></i>
                                 </button>
-                                <input id="search-input" type="text" placeholder="Search burgers" autocomplete="on">
+                                <input id="search-input" type="text" placeholder="Search by name or restaurants..." autocomplete="on">
                             </div>
                             <div class="search-list">
                                 <button onclick="showFullList()" id="search-list" title="Show full list">
@@ -45,8 +45,8 @@
                             </div>
                         </div>
                         <div class="items-container" id="items">
-                            <!-- Sample item
-                            <div class="item">
+                            <!-- Sample item -->
+                            <!-- <div class="item">
                                 <div class="item-left">
                                     <div class="name">
                                         <h2>Nome</h2>
@@ -58,7 +58,7 @@
                                     <div class="description">Descrizione</div>
                                 </div>
                                 <div class="item-right">
-                                    
+                                    <img src="../public/images/burger.png" alt="burger">
                                 </div>
                             </div> -->
                         </div>
